# MAI_OS_Labs

./: README.md
lab1/: child1  child1.cpp  child2  child2.cpp  main  main.c  main.cpp  makefile  something
lab1.1/: child1  child1.cpp  child2  main  main.cpp
lab1.2/: child1  child1.cpp  child2  child2.cpp  main  main.cpp
lab2/: main  main.cpp  make_sample.cpp  makefile  out.txt  plot.py  sample.txt
lab2.0/: main  main.cpp  makefile  out.txt
lab2.1/: main  main.cpp  makefile  out.txt  plot.py  test  test.cpp
lab3/: child1  child2  child2.cpp  main  main.cpp  makefile  temp_1.txt  test  test.cpp
lab3.1/: child1  child1.cpp  child2  main  main.cpp  temp_1.txt
lab4/: CMakeLists.txt  lib.h  lib1.cpp  lib2.cpp  main  main.cpp  makefile  prime.cpp  prime.h  prog1.cpp  prog2.cpp
lab5-7/: CMakeLists.txt  comp_node.cpp  cont_node.cpp
test/: main  main.cpp
